--- a/databases/postgresql84-server/files/pkg-install-server.in
+++ b/databases/postgresql84-server/files/pkg-install-server.in
@@ -1,8 +1,11 @@
 #! /bin/sh
 
-# $FreeBSD: ports/databases/postgresql83-server/pkg-install-server,v 1.6 2008/01/22 14:08:48 girgen Exp $
+# $FreeBSD: ports/databases/postgresql84-server/pkg-install-server,v 1.7 2008/02/18 12:55:02 girgen Exp $
 
 PATH=/bin:/usr/bin:/usr/sbin
+PG_USER=%%PG_USER%%
+PG_GROUP=%%PG_GROUP%%
+PG_UID=%%PG_UID%%
 
 backupwarning() { echo "
 
@@ -22,11 +25,11 @@ backupwarning() { echo "
 case $2 in
 PRE-INSTALL)
 	backupwarning
-	PGUSER=${PGUSER:-pgsql}
-	PGGROUP=${PGGROUP:-pgsql}
-	DB_DIR=${PKG_PREFIX}/${PGUSER}
-	UID=70
-	GID=70
+	PGUSER=${PGUSER:-${PG_USER}}
+	PGGROUP=${PGGROUP:-${PG_GROUP}}
+	DB_DIR=${PKG_PREFIX}/${PG_USER}
+	UID=${PG_UID}
+	GID=${PG_UID}
 
 	if pw group show "${PGGROUP}" 2>/dev/null; then
 		echo "You already have a group \"${PGGROUP}\", so I will use it."
