--- a/databases/postgresql90-server/files/postgresql.in
+++ b/databases/postgresql90-server/files/postgresql.in
@@ -1,6 +1,6 @@
 #!/bin/sh
 
-# $FreeBSD: ports/databases/postgresql84-server/files/postgresql.in,v 1.3 2009/07/15 16:55:40 dougb Exp $
+# $FreeBSD: ports/databases/postgresql90-server/files/postgresql.in,v 1.4 2010/03/27 00:12:50 dougb Exp $
 #
 # PROVIDE: postgresql
 # REQUIRE: LOGIN
@@ -32,7 +32,7 @@ load_rc_config postgresql
 # set defaults
 postgresql_enable=${postgresql_enable:-"NO"}
 postgresql_flags=${postgresql_flags:-"-w -s -m fast"}
-postgresql_user=pgsql
+postgresql_user=${postgresql_user:-"%%PG_USER%%"}
 eval postgresql_data=${postgresql_data:-"~${postgresql_user}/data"}
 postgresql_class=${postgresql_class:-"default"}
 postgresql_initdb_flags=${postgresql_initdb_flags:-"--encoding=utf-8 --lc-collate=C"}
