--- a/misc/Makefile
+++ b/misc/Makefile
@@ -68,6 +68,7 @@
     SUBDIR += detachtty
     SUBDIR += diary-hercules
     SUBDIR += diction
+    SUBDIR += digitemp
     SUBDIR += display
     SUBDIR += dnetc
     SUBDIR += dotfile
@@ -385,6 +386,7 @@
     SUBDIR += p5-Array-PrintCols
     SUBDIR += p5-Array-RefElem
     SUBDIR += p5-Asterisk
+    SUBDIR += p5-Bot-Training
     SUBDIR += p5-Business-Hours
     SUBDIR += p5-Business-ISBN
     SUBDIR += p5-Business-ISBN-Data
