Restore the possibility to define EXTRA_COMPILERS which must reside in $PATH.
PR:		158888
Submitted by:	Pan Tsu <inyaoo@gmail.com>

--- a/devel/ccache/files/ccache-update-links.sh.in
+++ b/devel/ccache/files/ccache-update-links.sh.in
@@ -2,7 +2,7 @@
 #
 # Author: Emanuel Haupt <ehaupt@FreeBSD.org>
 #
-# $FreeBSD$
+# $FreeBSD: ports/devel/ccache/files/ccache-update-links.sh.in,v 1.1 2011/03/29 14:15:03 ehaupt Exp $
 #
 
 CCACHE_COMPILERS="%%CCACHE_COMPILERS%% ${EXTRA_COMPILERS}"
@@ -32,7 +32,7 @@ esac
 # create compiler links
 for comp in ${CCACHE_COMPILERS}
 do
-	if [ -f "${PREFIX}/bin/${comp}" ] || [ -f "/usr/bin/${comp}" ]; then
+	if command -v "${comp}" >/dev/null; then
 		if [ ! -L "${PREFIX}/${CCLINKDIR}/${comp}" ]; then
 			[ "$1" = "-v" ] && echo "create symlink for ${comp}"
         		ln -sf ${PREFIX}/bin/ccache ${PREFIX}/${CCLINKDIR}/${comp}
