--- a/dns/powerdns/files/pdns.in
+++ b/dns/powerdns/files/pdns.in
@@ -1,10 +1,10 @@
 #!/bin/sh
 #
-# $FreeBSD: ports/dns/powerdns/files/pdns.in,v 1.5 2009/07/15 16:55:41 dougb Exp $
+# $FreeBSD: ports/dns/powerdns/files/pdns.in,v 1.6 2010/03/27 00:12:57 dougb Exp $
 #
 
 # PROVIDE: pdns_server
-# REQUIRE: DAEMON
+# REQUIRE: DAEMON %%MYSQL%% %%PGSQL%% %%SLAPD%%
 # KEYWORD: shutdown
 
 #
