--- a/www/geronimo/files/pkg-deinstall.in
+++ b/www/geronimo/files/pkg-deinstall.in
@@ -8,7 +8,7 @@
 # * Checks if the '%%USER%%' user exists. If it does, then it displays
 #   a message.
 #
-# $FreeBSD$
+# $FreeBSD: ports/www/geronimo/files/pkg-deinstall.in,v 1.1 2007/04/29 03:25:48 nemoliu Exp $
 #
 
 USER=%%USER%%
@@ -34,13 +34,6 @@ if [ "$2" = "DEINSTALL" ]; then
 		else
 			echo " [ FAILED ]"
 		fi
-	fi
-fi
-
-if [ "$2" = "POST-DEINSTALL" ]; then
-	# If the user exists, then display a message
-	if pw usershow "${USER}" 2>/dev/null 1>&2; then
-		echo "To delete the ${USER} user permanently, use 'pw userdel ${USER}'"
 	fi
 fi
 
