--- a/net/netatalk/files/netatalk.in
+++ b/net/netatalk/files/netatalk.in
@@ -1,9 +1,9 @@
 #!/bin/sh
 #
-# $FreeBSD: ports/net/netatalk/files/netatalk.in,v 1.2 2007/04/03 04:10:14 marcus Exp $
+# $FreeBSD: ports/net/netatalk/files/netatalk.in,v 1.3 2010/03/27 00:13:49 dougb Exp $
 #
 # PROVIDE: atalkd papd cnid_metad timelord afpd
-# REQUIRE: DAEMON %%SRVLOC%%
+# REQUIRE: DAEMON %%SRVLOC%% %%ZEROCONF%%
 # KEYWORD: shutdown
 #
 # AppleTalk daemons. Make sure not to start atalkd in the background:
