Subsonic is a free, web-based media streamer, providing ubiquitous access to your music. Use it to share your music with friends, or to listen to your own music while at work. You can stream to multiple players simultaneously, for instance to one player in your kitchen and another in your living room.
PR:		ports/159367
Submitted by:	Nicole Reid <root@cooltrainer.org>

--- a/www/Makefile
+++ b/www/Makefile
@@ -1749,6 +1749,7 @@
     SUBDIR += squirm
     SUBDIR += squishdot
     SUBDIR += srg
+    SUBDIR += subsonic
     SUBDIR += suphp
     SUBDIR += surf
     SUBDIR += surfraw
@@ -1950,7 +1951,6 @@
     SUBDIR += wgetpaste
     SUBDIR += wikicalc
     SUBDIR += wikindx
-    SUBDIR += wiliki
     SUBDIR += wml
     SUBDIR += woof
     SUBDIR += wordpress
