--- a/www/xpi-adblock/Makefile.xpi
+++ b/www/xpi-adblock/Makefile.xpi
@@ -5,7 +5,7 @@
 # Date created:		28 March 2006
 # Whom:				Andrew Pantyukhin <infofarmer@FreeBSD.org>
 #
-# $FreeBSD: ports/www/xpi-adblock/Makefile.xpi,v 1.23 2009/12/14 14:39:12 beat Exp $
+# $FreeBSD: ports/www/xpi-adblock/Makefile.xpi,v 1.24 2010/09/08 00:44:49 pgollucci Exp $
 #
 
 # XPI_ID		- Extension id, might be in {12345-...} or dev@org format
@@ -85,11 +85,11 @@ USE_ZIP=	yes
 EXTRACT_AFTER_ARGS=	-d ${WRKSRC}
 
 XPI_DISTNAME?=	${PORTNAME}
-XPI_APPS_ALL_WC=	*firefox* *thunderbird* *flock* *sunbird* *seamonkey*
+XPI_APPS_ALL_WC=	*firefox* *thunderbird* *seamonkey*
 
-XPI_APPS_ALL=	firefox firefox3 firefox35 linux-firefox linux-firefox-devel \
-		flock linux-flock thunderbird thunderbird3 linux-thunderbird \
-		seamonkey sunbird linux-sunbird
+XPI_APPS_ALL=	firefox firefox3 linux-firefox linux-firefox-devel \
+		thunderbird thunderbird3 linux-thunderbird \
+		seamonkey seamonkey2 linux-seamonkey
 # kompozer linux-kompozer
 # Other apps: mango
 
