Update to 0.11.1 Pacify portlint(1) Use USERS/GROUPS
PR:		ports/159399
Submitted by:	James O'Gorman <james@netinertia.co.uk> (maintainer)
Approved by:	wxs (mentor)

--- a/sysutils/boxbackup/files/bbstored.in
+++ b/sysutils/boxbackup/files/bbstored.in
@@ -1,6 +1,6 @@
 #!/bin/sh
 #
-# $FreeBSD: ports/sysutils/boxbackup/files/bbstored.sh.in,v 1.2 2006/02/20 20:47:41 dougb Exp $
+# $FreeBSD$
 #
 # PROVIDE: bbstored
 # REQUIRE: NETWORKING
