--- a/sysutils/boxbackup/files/bbackupd.in
+++ b/sysutils/boxbackup/files/bbackupd.in
@@ -1,6 +1,6 @@
 #!/bin/sh
 #
-# $FreeBSD: ports/sysutils/boxbackup/files/bbackupd.sh.in,v 1.2 2006/02/20 20:47:41 dougb Exp $
+# $FreeBSD$
 #
 # PROVIDE: bbackupd
 # REQUIRE: NETWORKING
