--- a/security/maia/files/pkg-deinstall.in
+++ b/security/maia/files/pkg-deinstall.in
@@ -1,23 +1,13 @@
 #!/bin/sh
 #
-# $FreeBSD$
+# $FreeBSD: ports/security/maia/files/pkg-deinstall.in,v 1.1 2008/01/20 06:38:05 beech Exp $
 #
 
-USER=%%MAIAUSER%%
-GROUP=%%MAIAGROUP%%
 DIR=%%MAIADIR%%
 QUARANTINE=%%MAIAQUARANTINE%%
 MAIAWEB=%%PREFIX%%/www/maia
 
 if [ "$2" = "POST-DEINSTALL" ]; then
-
-    if /usr/sbin/pw group show "${GROUP}" 2>&1 >/dev/null; then
-	echo "You should manually remove the \"${GROUP}\" group."
-    fi
-
-    if /usr/sbin/pw user show "${USER}" 2>&1 >/dev/null; then
-	echo "You should manually remove the \"${USER}\" user."
-    fi
 
     if [ -e ${DIR} ]; then
 	echo "You should manually remove the \"${DIR}\" directory."
