Set LATEST_LINK. Forced commit to indicate repo-copy has been performed.
Repo-copied by:	marcus
PR:		ports/160041

--- a/www/varnish2/files/varnishlog.in
+++ b/www/varnish2/files/varnishlog.in
@@ -1,6 +1,6 @@
 #!/bin/sh
 #
-# $FreeBSD: ports/www/varnish/files/varnishlog.in,v 1.5 2009/10/13 18:51:10 des Exp $
+# $FreeBSD: ports/www/varnish2/files/varnishlog.in,v 1.6 2010/03/27 00:15:19 dougb Exp $
 #
 
 # PROVIDE: varnishlog
