--- a/sysutils/boxbackup/files/bbackupd.in
+++ b/sysutils/boxbackup/files/bbackupd.in
@@ -1,27 +1,28 @@
 #!/bin/sh
-#
-# $FreeBSD$
+
+# $FreeBSD: ports/sysutils/boxbackup/files/bbackupd.in,v 1.1 2011/08/25 16:03:49 zi Exp $
 #
 # PROVIDE: bbackupd
 # REQUIRE: NETWORKING
 # KEYWORD: shutdown
-
 #
 # Add the following line to /etc/rc.conf to enable bbackupd:
 #
-#bbackupd_enable="YES"
-#
-
-: ${bbackupd_enable:="NO"}
-: ${bbackupd_flags:="%%PREFIX%%/etc/box/bbackupd.conf"}
-: ${bbackupd_pidfile:="/var/run/bbackupd.pid"}
+# bbackupd_enable="YES"
 
 . /etc/rc.subr
 
 name="bbackupd"
 rcvar=`set_rcvar`
+
+load_rc_config $name
+
+: ${bbackupd_enable:="NO"}
+: ${bbackupd_flags:="%%PREFIX%%/etc/box/bbackupd.conf"}
+
+pidfile=${bbackupd_pidfile:-"/var/run/bbackupd.pid"}
+
 command="%%PREFIX%%/bin/bbackupd"
 extra_commands="reload"
 
-load_rc_config $name
 run_rc_command "$1"
