--- a/devel/p5-Git-Repository/Makefile
+++ b/devel/p5-Git-Repository/Makefile
@@ -6,7 +6,8 @@
 #
 
 PORTNAME=	Git-Repository
-PORTVERSION=	1.20
+PORTVERSION=	1.21
+PORTREVISION=	1
 CATEGORIES=	devel perl5
 MASTER_SITES=	CPAN
 MASTER_SITE_SUBDIR=	CPAN:BOOK
@@ -14,6 +15,11 @@ PKGNAMEPREFIX=	p5-
 
 MAINTAINER=	perl@FreeBSD.org
 COMMENT=	Perl interface to Git repositories
+
+RUN_DEPENDS=	p5-System-Command>=0:${PORTSDIR}/devel/p5-System-Command
+
+LICENSE=	ART10 GPLv1
+LICENSE_COMB=	dual
 
 PERL_CONFIGURE=	yes
 
