--- a/www/tomcat7/files/tomcat7.in
+++ b/www/tomcat7/files/tomcat7.in
@@ -1,11 +1,10 @@
 #!/bin/sh
 #
-# $FreeBSD: ports/www/tomcat7/files/tomcat7.in,v 1.2 2010/10/26 08:20:15 ale Exp $
+# $FreeBSD: ports/www/tomcat7/files/tomcat7.in,v 1.3 2011/07/06 13:31:56 ale Exp $
 #
 
 # PROVIDE: tomcat7
-# REQUIRE: NETWORKING SERVERS
-# BEFORE: DAEMON
+# REQUIRE: LOGIN
 # KEYWORD: shutdown
 
 #
