--- a/databases/cassandra/files/cassandra.in
+++ b/databases/cassandra/files/cassandra.in
@@ -25,13 +25,16 @@
 # DAMAGE. 
 
 # PROVIDE: cassandra
+# REQUIRE: LOGIN
 # KEYWORD: shutdown
 #
-# $FreeBSD$
+# $FreeBSD: ports/databases/cassandra/files/cassandra.in,v 1.1 2011/09/03 05:19:20 sunpoet Exp $
 
 . /etc/rc.subr
 
 name="cassandra"
+rcvar=`set_rcvar`
+load_rc_config $name
 
 cassandra_enable=${cassandra_enable:-"NO"}
 cassandra_vmargs=${cassandra_vmargs:-"-XX:+UseConcMarkSweepGC -XX:+CMSIncrementalMode -XX:+CMSIncrementalPacing -XX:CMSIncrementalDutyCycleMin=0 -XX:+CMSIncrementalDutyCycle=10"}
@@ -42,8 +45,8 @@ command_args="-p /var/run/cassandra.pid >/dev/null"
 procname="java"
 pidfile=/var/run/cassandra.pid
 
-rcvar=`set_rcvar`
-load_rc_config $name
 export MAX_HEAP_SIZE="$cassandra_memory"
 export HEAP_NEWSIZE="$cassandra_newgen"
+export PATH=$PATH:%%LOCALBASE%%/bin
+
 run_rc_command "$1"
