--- a/security/maia/files/pkg-deinstall.in
+++ b/security/maia/files/pkg-deinstall.in
@@ -1,6 +1,6 @@
 #!/bin/sh
 #
-# $FreeBSD: ports/security/maia/files/pkg-deinstall.in,v 1.1 2008/01/20 06:38:05 beech Exp $
+# $FreeBSD: ports/security/maia/files/pkg-deinstall.in,v 1.2 2011/08/29 15:57:19 crees Exp $
 #
 
 DIR=%%MAIADIR%%
@@ -8,11 +8,9 @@ QUARANTINE=%%MAIAQUARANTINE%%
 MAIAWEB=%%PREFIX%%/www/maia
 
 if [ "$2" = "POST-DEINSTALL" ]; then
-
     if [ -e ${DIR} ]; then
 	echo "You should manually remove the \"${DIR}\" directory."
     fi
-    
     if [ -e ${QUARANTINE} ]; then
       echo "You should manually remove the \"${QUARANTINE}\" directory."
     fi
