- Pass maintainership to new volunteer - Remove DEPRECATED and EXPIRATION_DATE

--- a/german/ksteak/Makefile
+++ b/german/ksteak/Makefile
@@ -12,7 +12,7 @@ CATEGORIES=	german kde
 MASTER_SITES=	http://www.der-fritz.de/ksteak/
 DISTNAME=	ksteak-1.0.0pre2
 
-MAINTAINER=	ports@FreeBSD.org
+MAINTAINER=	conrads@cox.net
 COMMENT=	KDE frontend for steak, an english - german dictionary
 
 RUN_DEPENDS=	steak:${PORTSDIR}/german/steak
