--- a/mail/p5-Mail-Box/Makefile.man
+++ b/mail/p5-Mail-Box/Makefile.man
@@ -1,4 +1,4 @@
-# $FreeBSD: ports/mail/p5-Mail-Box/Makefile.man,v 1.4 2010/01/25 09:55:30 tobez Exp $
+# $FreeBSD: ports/mail/p5-Mail-Box/Makefile.man,v 1.5 2010/12/27 14:56:53 pgollucci Exp $
 
 MAN3+=	Mail::Box-Cookbook.3
 MAN3+=	Mail::Box-Index.3
@@ -18,8 +18,8 @@ MAN3+=	Mail::Box::IMAP4::Message.3
 MAN3+=	Mail::Box::Identity.3
 MAN3+=	Mail::Box::Locker.3
 MAN3+=	Mail::Box::Locker::DotLock.3
-MAN3+=	Mail::Box::Locker::Flock.3
 MAN3+=	Mail::Box::Locker::FcntlLock.3
+MAN3+=	Mail::Box::Locker::Flock.3
 MAN3+=	Mail::Box::Locker::Multi.3
 MAN3+=	Mail::Box::Locker::Mutt.3
 MAN3+=	Mail::Box::Locker::NFS.3
@@ -38,9 +38,9 @@ MAN3+=	Mail::Box::Message.3
 MAN3+=	Mail::Box::Message::Destructed.3
 MAN3+=	Mail::Box::Net.3
 MAN3+=	Mail::Box::Net::Message.3
-MAN3+=	Mail::Box::POP3s.3
 MAN3+=	Mail::Box::POP3.3
 MAN3+=	Mail::Box::POP3::Message.3
+MAN3+=	Mail::Box::POP3s.3
 MAN3+=	Mail::Box::Parser.3
 MAN3+=	Mail::Box::Parser::Perl.3
 MAN3+=	Mail::Box::Search.3
@@ -83,6 +83,7 @@ MAN3+=	Mail::Message::Field::AddrGroup.3
 MAN3+=	Mail::Message::Field::Address.3
 MAN3+=	Mail::Message::Field::Addresses.3
 MAN3+=	Mail::Message::Field::Attribute.3
+MAN3+=	Mail::Message::Field::Date.3
 MAN3+=	Mail::Message::Field::Fast.3
 MAN3+=	Mail::Message::Field::Flex.3
 MAN3+=	Mail::Message::Field::Full.3
