--- a/devel/dbus/files/dbus.in
+++ b/devel/dbus/files/dbus.in
@@ -1,6 +1,6 @@
 #!/bin/sh
 #
-# $FreeBSD$
+# $FreeBSD: ports/devel/dbus/files/dbus.in,v 1.17 2010/10/22 22:32:20 kwm Exp $
 #
 # PROVIDE: dbus
 # REQUIRE: DAEMON
@@ -31,7 +31,7 @@ dbus_prestart()
         mkdir -p /var/db/dbus
     fi
     if [ ! -f /var/db/dbus/machine-id ]; then
-        dbus-uuidgen > /var/db/dbus/machine-id
+        %%PREFIX%%/bin/dbus-uuidgen > /var/db/dbus/machine-id
     fi
 
     mkdir -p $(dirname $pidfile)
