--- a/net/nss-pam-ldapd/files/nslcd.in
+++ b/net/nss-pam-ldapd/files/nslcd.in
@@ -1,9 +1,10 @@
 #!/bin/sh
 #
-# $FreeBSD: ports/net/nss_ldapd/files/nslcd.in,v 1.3 2010/03/27 00:13:50 dougb Exp $
+# $FreeBSD: ports/net/nss-pam-ldapd/files/nslcd.in,v 1.4 2010/07/15 22:51:59 timur Exp $
 #
 # PROVIDE: nslcd
-# REQUIRE: DAEMON ldconfig resolv
+# REQUIRE: ldconfig resolv
+# BEFORE: syslogd
 #
 # Add the following line to /etc/rc.conf to enable the nslcd daemon:
 #
@@ -16,6 +17,15 @@ nslcd_enable=${nslcd_enable-"NO"}
 
 name=nslcd
 rcvar=$(set_rcvar)
+
+start_postcmd="nslcd_poststart"
+
+nslcd_poststart () {
+       until $(/usr/local/sbin/nslcd -c); do
+               echo " Waiting for nslcd to start"
+               sleep 1
+       done
+}
 
 command="%%PREFIX%%/sbin/${name}"
 pidfile="/var/run/${name}.pid"
