--- a/net-im/ejabberd/files/ejabberd.in
+++ b/net-im/ejabberd/files/ejabberd.in
@@ -1,5 +1,5 @@
 #! /bin/sh
-# $FreeBSD: ports/net-im/ejabberd/files/ejabberd.in,v 1.5 2010/03/27 00:14:13 dougb Exp $
+# $FreeBSD: ports/net-im/ejabberd/files/ejabberd.in,v 1.6 2010/09/30 16:22:15 olgeni Exp $
 
 # PROVIDE: ejabberd
 # REQUIRE: DAEMON
@@ -15,6 +15,7 @@
 #
 ejabberd_enable=${ejabberd_enable-"NO"}
 ejabberd_node=${ejabberd_node-"ejabberd@localhost"}
+ejabberd_epmd_address=${ejabberd_epmd_address-"127.0.0.1"}
 
 . /etc/rc.subr
 
@@ -50,7 +51,7 @@ ejabberd_checkstatus()
 ejabberd_start()
 {
     echo "Starting $name."
-    su $EJABBERDUSER -c "$EJABBERDCTL --node $ejabberd_node start"
+    su $EJABBERDUSER -c "env ERL_EPMD_ADDRESS=\"${ejabberd_epmd_address}\" $EJABBERDCTL --node $ejabberd_node start"
 }
 
 ejabberd_stop()
