Apache Axis2 is a Web Services / SOAP / WSDL engine, the successor to the widely used Apache Axis SOAP stack. There are two implementations of the Apache Axis2 Web services engine - Apache Axis2/Java and Apache Axis2/C
WWW: http://axis.apache.org/axis2/java/core/

PR:		ports/159269
Reviewed by:	glewis
Submitted by:	Jason Helfman <jhelfman@e-e.com>
Approved by:	bapt (mentor)

--- a/www/Makefile
+++ b/www/Makefile
@@ -53,6 +53,7 @@
     SUBDIR += aws
     SUBDIR += awstats
     SUBDIR += axis
+    SUBDIR += axis2
     SUBDIR += b2evolution
     SUBDIR += bacula-web
     SUBDIR += bannerfilter
@@ -74,6 +75,7 @@
     SUBDIR += cadaver
     SUBDIR += cakephp11
     SUBDIR += cakephp12
+    SUBDIR += cakephp13
     SUBDIR += calamaris
     SUBDIR += castget
     SUBDIR += caudium14
