- Silence startup noise [1] - Fix build with custom PREFIX/LOCALBASE - Fix build when using CLANG - Add OPTIONS for MAC resolution - Add LICENSE
PR:		ports/159915
Submitted by:	Janos Mohacsi <janos.mohacsi@bsd.hu> (maintainer) [1]

--- a/net-mgmt/ndpmon/files/ndpmonitor.in
+++ b/net-mgmt/ndpmon/files/ndpmonitor.in
@@ -1,6 +1,6 @@
 #!/bin/sh
 #
-# $FreeBSD: ports/net-mgmt/ndpmon/files/ndpmonitor.in,v 1.3 2010/03/27 00:14:23 dougb Exp $
+# $FreeBSD: ports/net-mgmt/ndpmon/files/ndpmonitor.in,v 1.4 2011/08/27 18:30:50 ohauer Exp $
 #
 # PROVIDE: ndpmonitor
 # REQUIRE: DAEMON NETWORKING
@@ -18,6 +18,6 @@ load_rc_config $name
 
 : ${ndpmonitor_enable="NO"}
 
-command_args=">/dev/null &"
+command_args=">/dev/null 2>&1 &"
 
 run_rc_command "$1"
