--- a/sysutils/bsdstats/files/300.statistics.in
+++ b/sysutils/bsdstats/files/300.statistics.in
@@ -1,6 +1,6 @@
 #!/bin/sh -
 #
-# $FreeBSD: ports/sysutils/bsdstats/files/300.statistics.in,v 1.43 2010/08/19 03:03:34 amdmi3 Exp $
+# $FreeBSD: ports/sysutils/bsdstats/files/300.statistics.in,v 1.44 2010/08/19 03:06:13 amdmi3 Exp $
 #
 
 # If there is a global system configuration file, suck it in.
@@ -172,7 +172,7 @@ report_ports () {
 
 	# Make the request	
 	string_length=`echo ${query_string} | wc -m` 
-	string_length=`expr ${string_length} - 1`
+	string_length=$((string_length - 1))
 
 	echo "POST ${url_prefix}/scripts/report_ports.php HTTP/1.0
 Host: ${checkin_server}
