--- a/databases/mysql-proxy/files/mysql-proxy.in
+++ b/databases/mysql-proxy/files/mysql-proxy.in
@@ -1,12 +1,10 @@
 #!/bin/sh
-#
-# $FreeBSD: ports/databases/mysql-proxy/files/mysql-proxy.in,v 1.3 2011/05/29 21:54:14 swills Exp $
-#
 
+# $FreeBSD: ports/databases/mysql-proxy/files/mysql-proxy.in,v 1.4 2011/09/18 19:58:15 swills Exp $
+#
 # PROVIDE: mysql-proxy
 # REQUIRE: LOGIN
 # KEYWORD: shutdown
-
 #
 # Add the following line to /etc/rc.conf to enable mysql-proxy:
 # mysql_proxy_enable (bool):		Set to "NO" by default.
@@ -35,15 +33,21 @@ load_rc_config $name
 : ${mysql_proxy_enable="NO"}
 : ${mysql_proxy_address=":4040"}
 : ${mysql_proxy_backend_addresses="127.0.0.1:3306"}
-: ${mysql_proxy_pid_file="/var/run/mysql-proxy.pid"}
 
-for addr in ${mysql_proxy_backend_addresses}; do
-	proxy_backend_addresses="${proxy_backend_addresses} --proxy-backend-addresses=${addr}"
-done
+start_precmd="${name}_prestart"
 
-pidfile="${mysql_proxy_pid_file}"
+mysql_proxy_prestart()
+{
+	local addr
+
+	for addr in ${mysql_proxy_backend_addresses}; do
+		command_args="${command_args} --proxy-backend-addresses=${addr}"
+	done
+}
+
+pidfile="${mysql_proxy_pid_file:-"/var/run/mysql-proxy.pid"}"
 command=%%PREFIX%%/libexec/mysql-proxy
-command_args="--proxy-address=${mysql_proxy_address} ${proxy_backend_addresses} ${mysql_proxy_args} --daemon --pid-file=${mysql_proxy_pid_file}"
+command_args="--proxy-address=${mysql_proxy_address} ${mysql_proxy_args} --daemon --pid-file=${pidfile}"
 procname=%%PREFIX%%/libexec/mysql-proxy
 
 run_rc_command "$1"
