--- a/mail/qmail/files/pkg-install.in
+++ b/mail/qmail/files/pkg-install.in
@@ -1,6 +1,6 @@
 #!/bin/sh
 #
-# $FreeBSD: ports/mail/qmail/files/pkg-install.in,v 1.8 2008/08/19 13:13:46 garga Exp $
+# $FreeBSD: ports/mail/qmail/files/pkg-install.in,v 1.9 2011/07/18 20:55:29 garga Exp $
 #
 
 export PATH=/bin:/sbin:/usr/bin:/usr/sbin
@@ -17,7 +17,7 @@ if [ "$2" = "POST-INSTALL" ]; then
 	%%RCDLINK%%echo ""
 	%%RCDLINK%%echo "A %%LOCALBASE%%/etc/rc.d/qmail.sh symlink was created.  To enable qmail at boot"
 	%%RCDLINK%%echo "time you need to copy a script to %%PREFIX%%/rc.  There are some examples at"
-	%%RCDLINK%%echo "%%PREFIX/boot"
+	%%RCDLINK%%echo "%%PREFIX%%/boot"
 	%%RCDLINK%%echo ""
 
 	if ! touch ${PREFIX}/alias/.qmail-postmaster \
