--- a/sysutils/syslog-ng1/files/syslog-ng.sh.in
+++ b/sysutils/syslog-ng1/files/syslog-ng.sh.in
@@ -1,6 +1,6 @@
 #!/bin/sh
 #
-# $FreeBSD: ports/sysutils/syslog-ng/files/syslog-ng.sh.in,v 1.2 2006/12/03 22:52:09 itetcu Exp $
+# $FreeBSD: ports/sysutils/syslog-ng1/files/syslog-ng.sh.in,v 1.3 2010/03/27 00:15:05 dougb Exp $
 #
 
 # PROVIDE: syslogd
