--- a/sysutils/syslog-ng-devel/files/syslog-ng.sh.in
+++ b/sysutils/syslog-ng-devel/files/syslog-ng.sh.in
@@ -1,6 +1,6 @@
 #!/bin/sh
 #
-# $FreeBSD: ports/sysutils/syslog-ng3-devel/files/syslog-ng.sh.in,v 1.6 2010/03/27 00:15:06 dougb Exp $
+# $FreeBSD: ports/sysutils/syslog-ng-devel/files/syslog-ng.sh.in,v 1.7 2010/11/08 20:17:36 cy Exp $
 #
 
 # PROVIDE: syslogd
