--- a/lang/fasm/Makefile
+++ b/lang/fasm/Makefile
@@ -6,12 +6,14 @@
 #
 
 PORTNAME=	fasm
-PORTVERSION=	1.69.32
+PORTVERSION=	1.69.34
 CATEGORIES=	lang devel
 MASTER_SITES=	http://flatassembler.net/
 
 MAINTAINER=	graudeejs@gmail.com
 COMMENT=	Flat, multiple-pass assembler for IA-32 & x86-64 architectures
+
+BROKEN=		unfetchable: size mismatch
 
 ONLY_FOR_ARCHS=	i386 amd64 ia64
 IA32_BINARY_PORT=	yes
